# VisualGyroscope

./: CMakeLists.txt  README.txt  Readme.md  configEnPlusHeaderPath.txt
MPP_SSD_costFunction/: CMakeLists.txt  MPPSSDcostFunction.cpp  README.txt
MPP_SSD_costFunction/scripts/: scripts3CFvs3ddl_lg0p325.sh  scripts3CFvslg.sh
MPP_SSD_gyroEstimation/: CMakeLists.txt  MPPSSDgyroEstim.cpp  README.md  README.txt  otherCommandLine_samples.txt
MPP_SSD_gyroEstimation_EquiRect/: CMakeLists.txt  MPPSSDgyroEstim_EquiRect.cpp  README.md  README.txt
P_SSD_gyroEstimation/: CMakeLists.txt  P_SSD_gyroEstimation.cpp  README.md  launch_P_SSD_prog.sh
P_SSD_gyroEstimation_EquiRect/: CMakeLists.txt  P_SSD_gyroEstimation_Equirect.cpp  README.md  launch_P_SSD_equirect_prog.sh
doc/: Doxyfile  config-doxygen.in
docs/: libPR_uml.uml  libPR_uml.~ml  libPR_uml_v1.uml  libPR_uml_v1.~ml  plateformesTestees.txt  prRegularSphereData.h
example/saveAndLoadColoredPointCloud/: CMakeLists.txt  saveAndLoadColoredPointCloud.cpp
modules/core/: CMakeLists.txt
modules/core_extended/: CMakeLists.txt
modules/core_extended/include/per/core_extended/: pr2DLine.h  pr8bitsIntensityLight.h  prAcquisitionModel.h  prCartesian2DLine.h  prColorLight.h  prColoredMesh.h  prColoredPointCloud.h  prIntensityLight.h  prLabColor.h  prLaserScannerModel.h  prLight.h  prLine.h  prMeshed.h  prPointCloud.h  prPolar2DPointVec.h  prPolar3DPointVec.h  prRGBColor.h  prRegularSphereData.h  prRegularlySampledCSImage.h  prSpectralElement.h  prTexturedMesh.h  prWorldModel.h
modules/core_extended/src/: pr8bitsIntensityLight.cpp  prColorLight.cpp  prColoredMesh.cpp  prColoredPointCloud.cpp  prIntensityLight.cpp  prLabColor.cpp  prLaserScannerModel.cpp  prLight.cpp  prPointCloud.cpp  prRGBColor.cpp  prSpectralElement.cpp  prTexturedMesh.cpp  prWorldModel.cpp
modules/data_processing/: CMakeLists.txt
modules/data_processing/include/per/data_processing/: prContour.h  prDot.h  prFeatureExtraction.h  prImageFilter.h  prKeyPoint.h  prKeyPointASIFT.h  prKeyPointHarris.h  prRing.h
modules/data_processing/src/: prContour.cpp  prDot.cpp  prFeatureExtraction.cpp  prImageFilter.cpp  prKeyPoint.cpp  prKeyPointASIFT.cpp  prKeyPointHarris.cpp  prRing.cpp
modules/estimation/include/per/estimation/: prCCCmp.h  prDirectCmp.h  prFeaturesComparator.h  prModelsParametersEstimation.h  prPhaseCorrelationCmp.h  prSSDCmp.h  prZNCCCmp.h  prZNSSDCmp.h
modules/estimation/src/: prCCCmp.cpp  prDirectCmp.cpp  prModelsParametersEstimation.cpp  prPhaseCorrelationCmp.cpp  prZNCCCmp.cpp  prZNSSDCmp.cpp
modules/features/: CMakeLists.txt
modules/features/include/per/features/: pr3DDistance.h  pr3DPose.h  prEntropy.h  prFeaturesSet.h  prGaussianMixtureSample.h  prGrayLevel.h  prIntensity.h  prPatch.h  prPatchPlane.h  prPatchPoint.h  prPhotometricEntropy.h  prPhotometricGMS.h  prSalientGMS.h
modules/features/src/: pr3DDistance.cpp  pr3DPose.cpp  prEntropy.cpp  prGrayLevel.cpp  prIntensity.cpp  prPatch.cpp  prPatchPlane.cpp  prPatchPoint.cpp  prPhotometricEntropy.cpp  prSalientGMS.cpp
modules/io_extended/: CMakeLists.txt
modules/io_extended/include/per/io_extended/: prMESH.h  prPCD.h  prPLY.h  prPTS.h  prPTX.h
modules/io_extended/src/: prMESH.cpp  prPCD.cpp  prPLY.cpp  prPTS.cpp  prPTX.cpp
modules/sensor_calibration/: CMakeLists.txt
modules/sensor_calibration/include/per/sensor_calibration/: prCameraModelOpt.h  prEquirectangularOpt.h  prLocalizedSensorOpt.h  prOmniOpt.h  prParaboloidOpt.h  prPerspectiveOpt.h  prSensorModelOpt.h
modules/sensor_calibration/src/: prCameraModelOpt.cpp  prEquirectangularOpt.cpp  prLocalizedSensorOpt.cpp  prOmniOpt.cpp  prParaboloidOpt.cpp  prPerspectiveOpt.cpp  prSensorModelOpt.cpp
modules/sensor_pose_estimation/include/per/sensor_pose_estimation/: prCameraPoseEstim.h  prPoseEstim.h  prPoseOmniEstim.h  prPoseParaboloidEstim.h  prPosePerspectiveEstim.h  prPoseSphericalEstim.h
modules/sensor_pose_estimation/src/: prCameraPoseEstim.cpp  prPoseEstim.cpp  prPoseOmniEstim.cpp  prPoseParaboloidEstim.cpp
modules/world_reconstruction/: CMakeLists.txt
modules/world_reconstruction/include/per/world_reconstruction/: prWorldModelOpt.h
modules/world_reconstruction/src/: prWorldModelOpt.cpp
